@@ -2,11 +2,17 @@
 #  It's first argument must be a list of coxph models
 anova.coxphlist <- function (object, test =  'Chisq' ,...) {
     if (!is.list(object)) stop("First argument must be a list")
-    if (!all(unlist(lapply(object, function(x) inherits (x, 'coxph')))))
-	     stop("Argument must be a list of coxph models")
-    if (any(sapply(object, function(x) !is.null(x$naive.var))))
-        stop("Can't do anova tables with robust variances")
+    is.coxmodel <- sapply(object, function(x) inherits(x, "coxph"))
+    if (!all(is.coxmodel))
+        stop("All arguments must be Cox models")    
+
+    is.robust <- sapply(object, function(x) !is.null(object$rscore))
+    if (any(is.robust)) stop("Can't do anova tables with robust variances")
     
+    ties <- sapply(object, function(x) x$method)
+    if (any(ties != ties[1]))
+        stop("all models must have the same ties option")
+
     responses <- as.character(unlist(lapply(object, 
 				     function(x) deparse(formula(x)[[2]]))))
     sameresp <- (responses == responses[1])
@@ -15,12 +21,11 @@ anova.coxphlist <- function (object, test =  'Chisq' ,...) {
         warning(paste("Models with response", deparse(responses[!sameresp]), 
             "removed because response differs from", "model 1"))
     }
-    method <- sapply(object, function(x) x$method)
-    if (any(method != method[1]))
-        stop("not all models have the same 'ties' option")
+
     ns <- sapply(object, function(x) length(x$residuals))
     if (any(ns != ns[1])) 
         stop("models were not all fit to the same size of dataset")
+
     nmodels <- length(object)
     if (nmodels == 1) # only one model remains
         return(anova.coxph(object[[1]], test = test))
